--- a/front end/index.html
+++ b/front end/index.html
@@ -98,8 +98,19 @@
 
     <!--Wireframe - PDF-->
     <section id="wireframe">
-        <div class="container">
-            <h2>Wireframe</h2>
+        <div class="container flex2">
+            <div class="textowire">
+                <h2>Wireframe</h2>
+                <p>Wireframe é uma prepresentação visual da estrutura básica de uma pagina. Ele deve ser feito de
+                    maneira mais simples possível, mostrando apenas o essencial, como uma espécie de rascunho,sem cores
+                    e imagem. Clique no botão <span> ou escaneie o QR Code</span> para obter o wireframe desta página.
+                </p>
+            </div>
+            <div class="qrcode">
+                <img src="img/qrcode.png" alt="QR Code do wireframe do site." target="_blank">
+ 
+            </div>
+ 
         </div>
     </section>
 
@@ -107,9 +118,28 @@
     <section id="conteudo">
         <div class="container">
             <h2>Conteúdo</h2>
-            <h3>HTML5</h3>
-            <h3>CSS3</h3>
-            <h3>JavaScript</h3>
+
+            <div class="cards">
+                <div class="card">
+                    <img src="img/estruturahtml.png" alt="Estrutua html5">
+                    <h3>HTML5</h3>
+                    <p>O html é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes conforme indicado neste cartão</p>
+                    <a href="#" target="_blank" class="botao">Saiba+</a>
+                </div>
+                <div class="card">
+                    <img src="img/boxmodel.png" alt="Box Model">
+                    <h3>CSS3</h3>
+                    <p>O box model relaciona[ as propriedades descritas neste cartão para compor a dimensão do elemento</p>
+                    <a href="#" target="_blank" class="botao"></a>
+                </div>
+                <div class="card">
+                    <img src="img/javascript.png" alt="JavaScript">
+                    <h3>JavaScript</h3>
+                    <p>JavaScript é uma linguagem de programação usada por desenvolvedores para fazer páginas interativas na internet </p>
+                    <a href="#" target="_blank" class="botao">Saiba+</a>
+                </div>
+            </div>
+           
         </div>
     </section>
 
