--- a/front end/index.html
+++ b/front end/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Em0R3csNMVE?si=ZLX334FPpvQAIRcz"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -107,7 +107,7 @@
                 </p>
             </div>
             <div class="qrcode">
-                <img src="img/qrcode.png" alt="QR Code do wireframe do site." target="_blank">
+                <img src="img/qrcode.png" alt="QR Code do wireframe do site." >
  
             </div>
  
@@ -119,7 +119,7 @@
         <div class="container">
             <h2>Conteúdo</h2>
 
-            <div class="cards">
+            <div class="cards flex4">
                 <div class="card">
                     <img src="img/estruturahtml.png" alt="Estrutua html5">
                     <h3>HTML5</h3>
@@ -130,7 +130,7 @@
                     <img src="img/boxmodel.png" alt="Box Model">
                     <h3>CSS3</h3>
                     <p>O box model relaciona[ as propriedades descritas neste cartão para compor a dimensão do elemento</p>
-                    <a href="#" target="_blank" class="botao"></a>
+                    <a href="#" target="_blank" class="botao">Saiba+</a>
                 </div>
                 <div class="card">
                     <img src="img/javascript.png" alt="JavaScript">
@@ -144,10 +144,48 @@
     </section>
 
     <!--Rodapé-->
+    <address>
+        <div class="container flex6">
+            <div id="contato">
+                <a href="https://api.whatsapp.com/send?phone=5511012341234" target="_blank">
+                    <img src="img/whatsapp.png" alt="Abrir conversa">
+                    <p>(11) 01234-1234</p>
+                </a>
+
+                <img src="img/fone.png" alt="Telefone">
+                <p>(11) 1234-1234</p>
+            </div>
+            
+            <div class="endreço">
+                <a href="https://maps.app.goo.gl/fHFvX97ZGJjih2Xn9">
+                    <img src="img/mapa.png" alt="Google maps" class="icone_mapa">
+                </a>
+
+                <img src="img/local.png" alt="Local" class="icone_local">
+                <p>Rua Nome da Rua, 222</p>
+                <p>Nome do Bairro</p>
+                <p>São Paulo - SP</p>
+
+                <a href="mailto:seuemail@email.com?subject=FRONTEND">
+                    <img src="img/email.png" alt="Enviar E-mail">
+                    <p>seuemail@email.com</p>
+                </a>
+
+                <p class="dados">&#128064; Endereço e dados de contado fictícios</p>
+            </div>
+
+            <div class="google_maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d14631.115151244212!2d-46.582988803346524!3d-23.540457472048015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1ssenac%20tatuape!5e0!3m2!1spt-BR!2sbr!4v1737588180925!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+
+        </div>
+    </address>
+
     <footer>
-        <div class="container">
+        <div class="container flex5">
             <div class="copyright">
-                <p>&#169; 2024 - Somente para fins educativos</p>
+                <p>&#169; 2025 - Somente para fins educativos</p>
             </div>
             <div class="social">
                 <a href="https://www.facebook.com/login/?locale=pt_BR" target="_blank"><img src="img/facebook.png"
@@ -160,6 +198,7 @@
                 <a href="https://x.com/?lang=pt-br" target="_blank"><img src="img/x_twitter.png" alt="X-Twitter"></a>
                 <a href="https://github.com/login" target="_blank"><img src="img/github.png" alt="GitHub"></a>
             </div>
+        </div>
     </footer>
     <a href="#inicio" id="topo">
         <img src="img/topo.png" alt="Ir para o ínicio de site">
