--- a/game/ps.html
+++ b/game/ps.html
@@ -93,38 +93,34 @@
             </a>
           </div>
 
-          <!--Cards-->
-        <section class="pb-3 bg-dark">
-          <h1 class="text-center py-3">Aqui você encontra os melhores jogos!</h1>
+          <!--Conteúdo-->
 
-          <div class="card-deck text-center d-flex flex-sm-column flex-md-row">
-              <div class="card">
-                <img class="card-img-top" src="img/xbox_x.jpg" alt="Console Xbox Serie X">
-                <div class="card-body">
-                  <h2 class="card-title">Xbox</h2>
-                  <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
-                  <a href="xbox.html" class="btn btn-outline-dark">Saiba +</a>
+          <section class="container bg-light py-3">
+            <h1 class="text-center text-primary">Familía PlayStation</h1>
+
+            <div class="row mt-3 d-flex align-items-center">
+                <article class="col-md-8 ">
+                    <h2 class="text-center text-primary">PS5</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat id expedita magni veniam. Est dolorem dolores quos minus. Ea ullam quis nesciunt fugiat error quisquam et rerum nostrum velit nisi!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores quos pariatur, aperiam ipsum, ex placeat quasi tenetur illo sit rerum molestiae dicta totam quam distinctio quaerat vero porro voluptates iste.</p>
+                </article>
+
+                <div class="col-md-4 ">
+                    <img src="img/ps5.jpg" alt="Console PlayStation 5" class="img-fluid img-thumbail">
                 </div>
-              </div>
-              <div class="card">
-                <img class="card-img-top" src="img/ps5.jpg" alt="Console PlayStation 5">
-                <div class="card-body">
-                  <h2 class="card-title">PlayStation</h2>
-                  <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional.</p>
-                  <a href="ps.html" class="btn btn-outline-dark">Saiba +</a>
-                </div>
-              </div>
-              <div class="card">
-                <img class="card-img-top" src="img/jogo-mario.jpg" alt="Imagem de capa do card">
-                <div class="card-body">
-                  <h2 class="card-title">Jogos</h2>
-                  <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este card tem o conteúdo ainda maior que o primeiro, para mostrar a altura igual, em ação.</p>
-                  <a href="fotos.html" class="btn btn-outline-dark">Saiba +</a>
-                </div>
-              </div>
             </div>
-        </section>
 
+            <div class="row">
+                <div>
+                    <img src="img/ps4.png" alt="Console PlayStation 4" class="img-fluid rounded-circle">
+                </div>
+                <article class="col-md-8">
+                    <h2 class="text-center text-primary">PS4</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime facere doloremque tenetur et assumenda asperiores. Iure animi ipsum perferendis, aut incidunt facere neque expedita hic, dolore laborum tenetur laboriosam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni alias minus quae. Dolores commodi maiores totam cum voluptate architecto dolorem consequatur velit praesentium fugit? Minima eveniet quod praesentium commodi laboriosam!</p>
+                </article>
+            </div>
+          </section>
 
         <!--Rodapé-->
         <footer class="bg-dark text-light">
